# neurlang

./: .gitignore  Cargo.toml  README.md  benchmark.py
benches/: array_benchmark.rs
examples/: mlp.rs
src/: array.rs  indexing.rs  lib.rs  main.rs  main_clunky.rs  neurlang.rs  slice.rs  utils.rs
