[package]
name = "neurlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
ndarray = "0.15.6"
rand = "0.8.5"
itertools = "0.10.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "array_benchmark"
harness = false
